Update 'u2kqpf3mc-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:bbb36b9a409b2ef03550ebd86b44072431b16315@sha256:1eaa7fb3d02c7002de6753f62f2f9f7110c7284c1bf84d449ff25fa15fde7279

--- a/components/u2kqpf3mc-go/overlays/development/deployment-patch.yaml
+++ b/components/u2kqpf3mc-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: u2kqpf3mc-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:bbb36b9a409b2ef03550ebd86b44072431b16315@sha256:1eaa7fb3d02c7002de6753f62f2f9f7110c7284c1bf84d449ff25fa15fde7279
+          name: container-image
